--- a/src/test/resources/properties/digitalbank.properties
+++ b/src/test/resources/properties/digitalbank.properties
@@ -1,5 +1,5 @@
 browser=chrome
-digitalbank.registrationpageurl=https://dbank-qa.wedevx.co/bank/signup
+digitalbank.registrationpageurl=http://jigitama1278.mydevx.com/bank/signup
 digitalbank.createnewcheckingurl=https://dbank-qa.wedevx.co/bank/account/checking-add
 digitalbank.createnewsavingsurl=https://dbank-qa.wedevx.co/bank/account/savings-add
 digitalbank.usersprofileurl=https://dbank-qa.wedevx.co/bank/user/profile
@@ -11,4 +11,7 @@ digitalbank.visadirecttransferurl=https://dbank-qa.wedevx.co/bank/external/xfer-
 digitalbank.visatransferresultsurl=https://dbank-qa.wedevx.co/bank/external/xfer-visa-process
 digitalbank.viewcheckingurl=https://dbank-qa.wedevx.co/bank/account/checking-view
 digitalbank.logouturl=https://dbank-qa.wedevx.co/bank/login?logout
+digitalbank.db.url=jdbc:mysql://3.249.240.23:3306/jigitama1278?useSSL=false
+digitalbank.db.username=jigitama1278
+digitalbank.db.password=cralumkhowmnisky
 
