--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     </dependencies>
 
 
