--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <!-- I want my maven project to use java21 as a compiler, otherwise by default maven uses java 5 -->
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -101,11 +101,20 @@
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.2.0</version>
                     </dependency>
-
                 </dependencies>
 
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
-</project>
+</project> 
