--- a/src/test/resources/properties/digitalbank.properties
+++ b/src/test/resources/properties/digitalbank.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=headless
 digitalbank.registrationpageurl=http://jigitama1278.mydevx.com/bank/signup
 digitalbank.createnewcheckingurl=https://dbank-qa.wedevx.co/bank/account/checking-add
 digitalbank.createnewsavingsurl=https://dbank-qa.wedevx.co/bank/account/savings-add
